# hifi

./: WebSocketClientWrapper.cpp  WebSocketClientWrapper.h
assignment-client/src/: Agent.cpp  AssignmentClient.cpp  AssignmentClient.h  AssignmentClientApp.cpp  AssignmentClientMonitor.cpp  AssignmentClientMonitor.h
assignment-client/src/audio/: AudioMixer.cpp  AudioMixer.h  AudioMixerClientData.cpp  AudioMixerClientData.h  AudioMixerSlave.cpp  AudioMixerSlave.h
assignment-client/src/avatars/: AvatarMixer.cpp  AvatarMixer.h  AvatarMixerClientData.cpp  AvatarMixerClientData.h  AvatarMixerSlave.cpp  AvatarMixerSlave.h
assignment-client/src/octree/: OctreeServer.cpp
cmake/macros/: TargetJson.cmake
cmake/modules/: FindDraco.cmake
cmake/templates/: FixupBundlePostBuild.cmake.in
domain-server/src/: DomainGatekeeper.cpp  DomainGatekeeper.h  DomainServer.cpp  DomainServer.h  DomainServerNodeData.h  DomainServerSettingsManager.cpp  main.cpp
ice-server/src/: IceServer.h
interface/: CMakeLists.txt
interface/resources/qml/: DeveloperTools.qml
interface/src/: Application.cpp  Application.h  CrashReporter.cpp  FileLogger.cpp  Menu.cpp  Menu.h  SecondaryCamera.cpp  main.cpp
interface/src/avatar/: AvatarManager.cpp  Head.cpp  MyAvatar.cpp  MyAvatar.h
interface/src/devices/: DdeFaceTracker.cpp  DdeFaceTracker.h
libraries/fbx/: CMakeLists.txt
libraries/fbx/src/: FBXReader.cpp  FBXReader.h  FBXReader_Mesh.cpp  FBXReader_Node.cpp  FBXWriter.cpp  OBJReader.cpp
scripts/system/: pal.js
tests/ui/: CMakeLists.txt
tools/oven/: CMakeLists.txt
(+123 files in other folders)
